@@ -2755,6 +2755,8 @@ def test_suite(keep_only=None, starting_with=None):
                    'bzrlib.tests.intertree_implementations',
                    'bzrlib.tests.per_lock',
                    'bzrlib.tests.per_repository',
+                   'bzrlib.tests.per_repository_chk',
+                   'bzrlib.tests.per_repository_reference',
                    'bzrlib.tests.test__dirstate_helpers',
                    'bzrlib.tests.test_ancestry',
                    'bzrlib.tests.test_annotate',
@@ -2839,7 +2841,6 @@ def test_suite(keep_only=None, starting_with=None):
                    'bzrlib.tests.test_registry',
                    'bzrlib.tests.test_remote',
                    'bzrlib.tests.test_repository',
-                   'bzrlib.tests.per_repository_reference',
                    'bzrlib.tests.test_revert',
                    'bzrlib.tests.test_revision',
                    'bzrlib.tests.test_revisionspec',
